--- a/proyecto/src/app/principal/carrito/carrito.component.html
+++ b/proyecto/src/app/principal/carrito/carrito.component.html
@@ -4,11 +4,11 @@
 
 
 <div class="text-center my-3">
-  <h1>Carrito de compras</h1>
-  <button *ngIf="pedidos.length > 0" class="btn btn-primary my-5" (click)="facturarCarrito(usuario.identificacion, pedidos)">
-      <i class="fas fa-cash-register"></i> Facturar todo el carrito
-  </button>
-  <h2 *ngIf="pedidos.length < 1"><i class="fas fa-shopping-cart"></i> Carrito Vacío</h2>
+    <h1>Carrito de compras</h1>
+    <button *ngIf="pedidos.length > 0" class="btn btn-primary my-5" (click)="facturarCarrito(usuario.identificacion, pedidos)">
+        <i class="fas fa-cash-register"></i> Facturar todo el carrito
+    </button>
+    <h2 *ngIf="pedidos.length < 1"><i class="fas fa-shopping-cart"></i> Carrito Vacío</h2>
 </div>
 <div class="container">
     <div class="row justify-content-start">
@@ -17,11 +17,12 @@
                 <div class="card-body">
                     <img [src]="pedido.imagen" class="card-img-top mb-3" alt="Imagen del producto">
                     <h5 class="card-title">{{ pedido.producto_v }}</h5>
-                    <p><i class="fas fa-box"></i> Cantidad: {{ pedido.cantidad }}</p>
+                    <!--<p><i class="fas fa-box"></i> Cantidad: {{ pedido.cantidad }}</p>-->
+                    <i class="fas fa-box mx-1"></i> Cantidad: <input type="number" style="width: 10%;" placeholder="Nueva cantidad" [(ngModel)]="cantidades[ParseInt(pedido.id)]" >
                     <p><i class="fas fa-tag"></i> Precio Unitario: ${{ pedido.precio | number:"1.0-0" }}</p>
                     <p><i class="fas fa-calculator"></i> Total: ${{ pedido.precio * pedido.cantidad | number:"1.0-0" }}</p>
                     <div class="d-flex justify-content-around">
-                        <button class="btn btn-info" (click)="actualizar()"><i class="fas fa-sync-alt"></i> Actualizar</button>
+                        <button class="btn btn-info" (click)="actualizar(pedido.id, pedido.producto)"><i class="fas fa-sync-alt"></i> Actualizar</button>
                         <button class="btn btn-danger" (click)="eliminar(pedido.id)"><i class="fas fa-trash-alt"></i> Eliminar</button>
                         <button class="btn btn-success" (click)="pagarPedido(usuario.identificacion, pedido)"><i class="fas fa-wallet"></i> Facturar</button>
                     </div>
